[package]
name = "knyst"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Real time dynamic audio graph and synthesis library"
readme = "README.md"
keywords = ["audio", "synthesis", "music", "dsp", "sound"]
categories = ["multimedia::audio"]
authors = ["Erik Natanael Gustafsson <code@eriknatanael.com>"]
repository = "https://github.com/ErikNatanael/knyst"
homepage = "https://github.com/ErikNatanael/knyst"

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true


[dependencies]
slotmap = "1.0"
# For ergonomic error handling
thiserror = "1.0"
# For real time safe communication between threads
rtrb = "0.2"
fastrand = "1.4.1"
# Scheduling primitives from meadowlark
meadowlark-core-types = { git = "https://github.com/MeadowlarkDAW/meadowlark-core-types" }
# Fast approximation of common float math. Probably under BSD-3.
fastapprox = "0.3"
# Downcast used to have any user data in the Resources struct
downcast-rs = "1.2.0"
# Loading audio buffers
symphonia = {version = "0.5.1", features = ["mp3"] }
# JACK audio backend
jack = { version =  "0.10", optional = true }
# CPAL audio backend
cpal = {version = "0.14.0", optional = true }
# Only for non real time use
crossbeam-channel = "0.5.6"

# For concurrency testing
[target.'cfg(loom)'.dependencies]
loom = {version = "0.5", features = ["checkpoint"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"
anyhow = "1.0"
dialog = "0.3"
fundsp = { version = "0.9" }


[[bench]]
name = "micro_benchmarks"
harness = false


[[example]]
name = "jack_example"
path = "examples/jack_example.rs"
required-features = ["jack"]

[[example]]
name = "cpal_example"
path = "examples/cpal_example.rs"
required-features = ["cpal"]

[[example]]
name = "sine_piece"
path = "examples/sine_piece.rs"
required-features = ["cpal"]

[[example]]
name = "fundsp_encapsulation"
path = "examples/fundsp_encapsulation.rs"
required-features = ["cpal"]

[[example]]
name = "sequences"
path = "examples/sequences.rs"
required-features = ["cpal"]

[[example]]
name = "sound_file_playback"
path = "examples/sound_file_playback.rs"
required-features = ["cpal"]
