[package]
name = "knyst_core"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0"
# For ergonomic error handling
thiserror = "1.0"
# Downcast used to have any user data in the Resources struct
downcast-rs = "1.2.0"

fastrand = "2.0.1"
# Loading audio buffers
symphonia = { version = "0.5.1", features = ["mp3"] }
# Saving to wav
hound = "3.5.1"
