[package]
name = "knyst_macro"
version = "0.5.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all_tests.rs"

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits", "parsing", "full"] }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
knyst = { path = "../knyst", version = "0.5.0", default-features = false }
