[package]
name = "knyst_macro"
authors = ["Erik Natanael Gustafsson <code@eriknatanael.com>"]
license = "MIT OR Apache-2.0"
description = "Real time dynamic audio graph and synthesis library"
readme = "README.md"
repository = "https://github.com/ErikNatanael/knyst"
version = "0.5.1"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
ident_case = "1.0.1"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits", "parsing", "full"] }
